src/test/deca/context/invalid/provided/mult_incompatible.deca
/*/ Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 16: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2022*/

{
   int a;
   int b;
   boolean c;

   // Doit etre refuse.
   c = a*b;
}
